# Healthcase-Symptom-Checker-Unthinkable

./: .gitignore  LICENSE  README.md  disease_comparator.py  flask_hello_api.py  pyproject.toml  requirements.txt  symptom_checker.py  symptom_checker_ui.py  test_symptom_checker.py
docs/: README.md
src/healthcase/: __init__.py  api.py  cli.py  config.py  exceptions.py  llm_interface.py  logger.py  logic.py  models.py  symptom_checker_ui.py  ui.py  validators.py
tests/: __init__.py  test_config.py  test_llm_interface.py  test_logic.py  test_symptom_checker.py  test_validators.py
